Adjusted styling and fixed inline style for Megaphone component to accept prop as passed in

--- a/app/index.css
+++ b/app/index.css
@@ -1,7 +1,6 @@
 body {
   background: tomato;
-}
-
-h1 {
-  color: white;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
 }
